--- a/skills.html
+++ b/skills.html
@@ -38,12 +38,15 @@
 <div class="container mt-3">
   <h2>My Frontend and Backend Skills</h2>
   <ul class="list-group">
-    <li class="list-group-item">C, C++ </li>
-    <li class="list-group-item">java, javascript, .Net</li>
-    <li class="list-group-item">Sql</li>
     <li class="list-group-item">Html</li>
-    <li class="list-group-item">Css</li>
-    <li class="list-group-item">Bootstrap</li>
+    <li class="list-group-item">Css ,Flexbox, Bootstrap</li>
+    <li class="list-group-item">JavaScript</li>
+    <li class="list-group-item">Object Oriented Programming</li>
+    <li class="list-group-item">React</li>
+    <li class="list-group-item">Express</li>
+    <li class="list-group-item">MongoDB</li>
+    <li class="list-group-item">APIs</li>
+    <li class="list-group-item">Agile</li>
   
   </ul>
 </div>
