--- a/contact.html
+++ b/contact.html
@@ -36,44 +36,30 @@
     </div>
       </div>
     </nav>
+    <div class="container mt-3 text-center">
+    <p>
+       <h2>Please Contact Me On</h2>
+    </p>
+
+  <address>
+    <a href="mailto:naaz166@gmail.com">naaz166@gmail.com</a><br>
+    <br>
+    <a href="https://github.com/">My Github</a> <br><br>
+    <a href="https://www.linkedin.com/in/humera-naaz-947661227/">My Linkedin</a>
     
-            <!-- Wrapper container -->
-<div class="container py-4">
+     </address>
 
-  <!-- Bootstrap 5 starter form -->
-  <form id="contactForm">
-
-    <!-- Name input -->
-    <div class="mb-3">
-      <label class="form-label" for="name">Name</label>
-      <input class="form-control" id="name" type="text" placeholder="Name" />
-    </div>
-
-    <!-- Email address input -->
-    <div class="mb-3">
-      <label class="form-label" for="emailAddress">Email Address</label>
-      <input class="form-control" id="emailAddress" type="email" placeholder="Email Address" />
-    </div>
-
-    <!-- Message input -->
-    <div class="mb-3">
-      <label class="form-label" for="message">Message</label>
-      <textarea class="form-control" id="message" type="text" placeholder="Message" style="height: 10rem;"></textarea>
-    </div>
-
-    <!-- Form submit button -->
-    <div class="d-grid">
-      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
-    </div>
-
-  </form>
-
-</div>
    
-            <div class="container mt-3">
-              <img class="img-fluid" src="\images\pic6.png" alt="tech" width="100%" height="auto"> 
-            </div>
-          
+
+  <img class="img-fluid" src="\images\pic6.png" alt="tech" width="50%" height="auto"> 
+</div>
+</div>
+</div>
+
+
+
+
+
 
  <!-- Latest compiled JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
