--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -41,9 +42,17 @@
  <div class="container text-center d-flex justified-content-center">
  <h1 class="text-center">Hi, I am Humera Naaz <small>learning Software Development</small></h1>
   </div>
+  <div class="container mt-3 text-center">
+  <div className="header__buttons">
+    <a href="/images/updated-cv.pdf" className="btn btn-outline" download><i class="fa fa-download"></i> Download Resume
+    </a>
+    </div>
+  </div>
+   
+   
  
   <div class="container mt-3">
-    <img class="img-fluid" src="\images\pic1.png" alt="tech" width="100%" height="auto"> 
+    <img class="img-fluid d-block m-auto" src="\images\pic1.png" alt="tech" width="80%" height="auto"> 
   </div>
   
 
